<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Smart Lock!</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="user_management">User Management</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="welcome_back_subtitle">Sign in to continue.</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="password_toggle_content_description" tools:ignore="PrivateResource">Show/hide password</string>
    <string name="login_button_text">Login</string>
    <string name="dont_have_account_text">Don\'t have an account yet? Sign up</string>
    <string name="login_title">Login</string>
    <string name="register_title">Register</string>
    <string name="dashboard_title">Dashboard</string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>
    <string name="api_button">Call API</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="name_label">Name</string>
    <string name="error_email_required">Email is required</string>
    <string name="error_password_required">Password is required</string>
    <string name="error_name_required">Name is required</string>
    <string name="error_email_invalid">Invalid email format</string>
    <string name="error_unknown">Unknown error</string>
    <string name="log_out">Logout</string>
    <string name="history">History</string>
    <string name="switch_camera">Switch Camera\n</string>
</resources>
