<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smartlockjava.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/user_management"
        android:name="com.example.smartlockjava.ui.userManagement.UserManagementFragment"
        android:label="@string/user_management"
        tools:layout="@layout/fragment_user_management" />

    <fragment
        android:id="@+id/history"
        android:name="com.example.smartlockjava.ui.historyManagement.HistoryFragement"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />
</navigation>